--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "sweetalert": "^1.1.3",
     "vue": "^2.2.6"
   },
   "devDependencies": {
